--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 
-<img src="downloads/octocat.png" id="octocat" alt="octocat-png" />
+<img src="images/octocat.png" id="octocat" alt="octocat-png" />
 
 <!-- Change this code here by copy and pasting your template on line 15 -->
 <p>Hello World! I’m Pivo. This is my website!</p>
